# glsl_validate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
cmake/: symbols.def  symbols.ld  symbols.txt
src/: glsl_validate.cpp  glsl_validate.hpp  module.cpp
